[workspace]
members = [
    "lang/base",
    "lang/generic-trait-lifetime",
    "lang/ownership",
    "lang/smart-pointer",
    "lang/functional",
    "lang/concurrency",
    "lang/ffi-demo",
    "lang/oop",
    "lang/default-and-with",
    "lang/compare",
    "pro/pprof",
    "pro/attri-hello-call",
    "pro/unsafe-lifetime",
    "pro/reflection",
    "pro/future-demo",
    "projs/minigrep",
    "projs/actix-web-demo",
    "projs/see-orm-demo/basic",
    # can't be multi-workspace in one project
    # "projs/see-orm-demo/tonic_example", actix_example, graphql_example
    "projs/see-orm-demo/tutorial/bakery-backend",
    "projs/see-orm-demo/tutorial/graphql-example",
    "projs/see-orm-demo/tutorial/rocket-example",
    "projs/wasm-hello/hello-wasm",
    "projs/url-mapper-rs",
    "projs/tokio-demo",
    "projs/grpc-demo/tonic-demo",
    "projs/libp2p-demo",
]