[package]
name = "alloy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
eyre = "0.6.12"
anyhow = "1.0.86"
alloy-rlp = "0.3.7"
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
alloy = { version = "0.6.2", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }