[package]
name = "self-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [ "rt-multi-thread", "macros", "time" ] }
self-hello = { path = "../attri-hello" }