[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"
description = "A demo to learn tonic and grpc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="grpc-server"
path="src/bin/server.rs"

[[bin]]
name="grpc-client"
path="src/bin/client.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = "0.11.0"
